syntax = "proto3";

package credis;

option go_package = "github.com/laixhe/gonet/proto/gen/config/credis;credis";

// Redis配置
message Redis {
  // 连接地址
  string addr         = 1; // @gotags: mapstructure:"addr"
  // 选择N号数据库
  int32 db_num        = 2; // @gotags: mapstructure:"db_num"
  // 设置打开数据库连接的最大数量
  string password     = 3; // @gotags: mapstructure:"password"
  // 最大链接数
  int32 pool_size     = 4; // @gotags: mapstructure:"pool_size"
  // 空闲链接数
  int32 min_idle_conn = 5; // @gotags: mapstructure:"min_idle_conn"
}